data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1107.wast
;; 8. **Test Eight**:    - A `br_table` with dynamically computed indices where arithmetic operations could result in edge-case values (e.g., overflow).    - **Constraint**: Ensures that dynamically computed indices are validated without causing operand stack corruption.    - **Relation**: Validates stack integrity and dynamic index resolution.

(assert_invalid
  (module (func $test-br_table-dynamic-index
    (block $label0
      (loop $loop0
        (i32.const 1000000000)
        (i32.const 1)
        (i32.mul)
        (br_table $label0 $loop0)
      )
    )
  ))
  "type mismatch"
)